Complete indexable skip list data structure with full test coverage